--- a/form.html
+++ b/form.html
@@ -16,11 +16,11 @@
         <div>
             <div class="mb-3">
                 <label class="form-label me-2">Username</label>
-                <input type="text" class="form-control" value="">
+                <input type="text" class="form-control" name="username" value="">
             </div>
             <div class="mb-3">
                 <label class="form-label me-2">Password</label>
-                <input type="password" class="form-control" value="">
+                <input type="password" class="form-control" name="password" value="">
             </div>
         </div>
         <hr>
@@ -29,37 +29,37 @@
         <h2 class="mb-3">Information</h2>
         <div class="mb-3">
             <label class="form-label me-2">Firstname</label>
-            <input type="text" class="form-control" value="">
+            <input type="text" class="form-control" name="firstname" value="">
         </div>
         <div class="mb-3">
             <label class="form-label me-2">Lastname</label>
-            <input type="text" class="form-control" value="">
+            <input type="text" class="form-control" name="lastname" value="">
         </div>
         <ul class="list-group mb-3">
             <li class="list-group-item">
-              <input class="form-check-input" type="radio" name="genderRadio" value="Male" checked>
+              <input class="form-check-input" type="radio" name="gender" value="Male">
               <label class="form-check-label">Male</label>
             </li>
             <li class="list-group-item">
-              <input class="form-check-input" type="radio" name="genderRadio" value="Female">
+              <input class="form-check-input" type="radio" name="gender" value="Female">
               <label class="form-check-label">Female</label>
             </li>
             <li class="list-group-item">
-              <input class="form-check-input" type="radio" name="genderRadio" value="Other">
+              <input class="form-check-input" type="radio" name="gender" value="Other">
               <label class="form-check-label">Other</label>
             </li>
         </ul>
         <div class="mb-3">
             <label class="form-label me-2">Age</label>
-            <input type="number" class="form-control" min="1" max="99" value="">
+            <input type="number" class="form-control" name="age" min="1" max="99" value="">
         </div>
         <div class="mb-3">
             <label class="form-label me-2">Address</label>
-            <input type="text" class="form-control" value="">
+            <input type="text" class="form-control" name="address" value="">
         </div>
         <div class="mb-3">
             <label class="form-label me-2">Phone Number</label>
-            <input type="text" class="form-control" value="" maxlength="10">
+            <input type="text" class="form-control" name="phonenumber" value="" maxlength="10">
         </div>
     </form>
     <div class="button mt-2">
